[gd_scene load_steps=2 format=3 uid="uid://duccgpts0o2yx"]

[ext_resource type="Script" path="res://ui/control.gd" id="1_jp0bc"]

[node name="Upgrade_Menu" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jp0bc")

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 44.0
offset_top = 434.0
offset_right = 387.0
offset_bottom = 597.0
text = "Increase sword size by 25%"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 424.0
offset_top = 433.0
offset_right = 760.0
offset_bottom = 601.0
text = "Increase pickup radius by 15%"

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 786.0
offset_top = 433.0
offset_right = 1116.0
offset_bottom = 599.0
text = "Increase sword damage by 15%"

[connection signal="pressed" from="Control/Button" to="Control" method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button2" to="Control" method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/Button3" to="Control" method="_on_button_3_pressed"]
